force-app/main/default/objects/CaseIssue__c/CaseIssue__c.object-meta.xml
<CustomObject>
    <label>Case Issue</label>
    <nameField>
        <displayFormat>CS-{000000}</displayFormat>
        <label>Case Issue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Issues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>