force-app/main/default/objects/CaseIssue__c/fields/AccountOwner__c.field-meta.xml
<CustomField>
    <fullName>AccountOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Issues</relationshipName>
    <type>Lookup</type>
</CustomField>