force-app/main/default/objects/CaseIssue__c/fields/CalculationType__c.field-meta.xml
<CustomField>
    <fullName>CalculationType__c</fullName>
    <label>Calculation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residual</fullName>
            </value>
            <value>
                <fullName>Upfront</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>