force-app/main/default/objects/CaseIssue__c/fields/ErrorType__c.field-meta.xml
<CustomField>
    <fullName>ErrorType__c</fullName>
    <inlineHelpText>Shows the subscription error status.</inlineHelpText>
    <label>Error Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>