force-app/main/default/objects/CaseIssue__c/fields/ExpectedAmount__c.field-meta.xml
<CustomField>
    <fullName>ExpectedAmount__c</fullName>
    <label>Expected Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>