force-app/main/default/objects/CaseIssue__c/fields/ExpectedFee__c.field-meta.xml
<CustomField>
    <fullName>ExpectedFee__c</fullName>
    <label>Expected Fee</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>