force-app/main/default/objects/CaseIssue__c/fields/ExpectedVolume__c.field-meta.xml
<CustomField>
    <fullName>ExpectedVolume__c</fullName>
    <label>Expected Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>