force-app/main/default/objects/CaseIssue__c/fields/ReceivedFee__c.field-meta.xml
<CustomField>
    <fullName>ReceivedFee__c</fullName>
    <label>Received Fee</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>