force-app/main/default/objects/CaseIssue__c/fields/ReceivedVolume__c.field-meta.xml
<CustomField>
    <fullName>ReceivedVolume__c</fullName>
    <label>Received Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>