force-app/main/default/objects/CaseIssue__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>SBQQ__Subscription__c</referenceTo>
    <relationshipName>casesubscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>